--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend for the nice-weather app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,10 @@
   },
   "homepage": "https://github.com/timbt/nice-weather-backend#readme",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
